# BoltzmannNN

./: .ycm_extra_conf.py  CMakeLists.txt
OpenGLWrapper/: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt
OpenGLWrapper/include/openglwrapper/: BufferAccessor.hpp  FBO.hpp  OpenGL.hpp  Shader.hpp  Texture.hpp  VAO.hpp  VBO.hpp
OpenGLWrapper/src/: FBO.cpp  OpenGL.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
include/boltzmann/: NeuralNetwork.hpp
src/: NeuralNetwork.cpp
src/app/: Main.cpp  MainXOR.cpp
